# jawm

./: .gitignore  JAWM.drawio  README.md  diff.txt  jawm.drawio  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: apptainer.yaml  demo.yaml  docs-page.yaml  kallisto.yaml  modules.webhook.yaml  modules.yaml  smoke_k8s.yaml  smoke_slurm.yaml  smoke_test.yaml  test-runner.yaml  test_local.yaml
docs/: 404.md  JAWM.drawio  README.md  development.md  examples.md  getting-started.md  hooks.py  howto.md  index.md  process_example.md  process_examples.md  process_howto.md  process_parameters.md  support.md  testing.md  utils.md  version-log.md
docs/_legacy/: process_examples.md  process_parameters.md
docs/cli/: jawm-dev.md  jawm-monitor.md  jawm-test.md  jawm.md  overview.md
docs/config/: config.md  overview.md  yaml.md
docs/debug/: errors.md  logs.md  stats.md
docs/get_started/: develop_workflow.md  install.md  run_process.md  run_workflow.md
docs/module/: develop.md  load.md  load_use.md  modules.md  overview.md  run.md  test.md
docs/process/: cls_methods.md  cls_parameters.md  conf_precedence.md  methods.md  overview.md  parameters.md  process.md
docs/stylesheets/: style.css
examples/fastqc/: fastqc.ipynb  fastqc.py
examples/fastqc/input/: reads.fastq
examples/fastqc/output/: reads_fastqc.html
examples/fastqc/parameters/: fastqc.yaml
jawm/: __init__.py  _config.py  _docs_param.py  _method_lib.py  _param_docs.py  _process_api.py  _process_base.py  _process_internal.py  _process_kubernetes.py  _process_local.py  _process_metal.py  _process_slurm.py  _utils.py  cli.py  cli_dev.py  cli_monitor.py  docs.py  jutils.py  process.py  utils.py
jawm/data/: jawm-test  nf2jm.py
notebook/: metal.ipynb  metal.py  output.txt  output_slurm.txt  slurm.ipynb  slurm.py
notebook/monitoring/Completed/: metal.1064318.0.txt  (+48 more)
notebook/parameters/: metal.yaml  metal2.yaml  python_example.yaml  slurm.yaml  slurm2.yaml
notebook/scripts/: hello.py
test/: README.md  base_smoke_test.ipynb  base_test.py  docker.py  git_action_local_test.py  git_test.py  notebook_test.ipynb  process_ex.py  readme.md
test/parameters/: apptainer.yaml  config1.yaml  config2.yaml  docker.yaml  k8.yaml  slurm.yaml
test/scripts/: hello.py  hello.rc
(+154 files in other folders)
