# pyproject.toml (minimal)
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jawm"
version = "0.1.0"
description = "just another workflow manager"
authors = [ { email = "bioinformatics@age.mpg.de" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
jawm = "jawm.cli:main"
jawm-dev = "jawm.cli_dev:main"

[tool.setuptools.data-files]
"bin" = ["jawm/data/jawm-test"]