# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jawm"
version = "0.1.0"
description = "just another workflow manager"
readme = "README.md"
license = { text = "MIT" }
authors = [{ email = "bioinformatics@age.mpg.de" }]
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=5.4.1",
]

[project.optional-dependencies]
full = [
  "pandas>=1.1",
  "openpyxl>=3.0",
  "requests"
]

[project.urls]
Homepage = "https://github.com/mpg-age-bioinformatics/jawm"

[project.scripts]
jawm = "jawm.cli:main"
jawm-dev = "jawm.cli_dev:main"
jawm-monitor = "jawm.cli_monitor:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["jawm*"]

# Include data files shipped inside the package (e.g., jawm/data/jawm-test)
[tool.setuptools.package-data]
jawm = ["data/*"]

[tool.setuptools.data-files]
"bin" = ["jawm/data/jawm-test", "jawm/data/nf2jm.py"]